Authentication with Logout button

--- a/gds/templates/gds/home.html
+++ b/gds/templates/gds/home.html
@@ -4,7 +4,7 @@
 <div class="container mt-5">
     <form class="col-6 mx-auto card" style="max-width: 350px; margin: 0 auto;" method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        <h2>GD Steels.Ltd</h2>
+        <h2>Kanti Steels Ltd</h2>
 
         <div class="mb-3">
             <label for="ItemName" class="form-label" style="font-weight: bold;">Item Name</label>
@@ -25,6 +25,21 @@
         <button type="submit" class="btn btn-success" style="width: 100%;" title="Click to add the entry">Add Entry</button>
     </form>
 </div>
+
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-auto">
+            <a href="/" class="btn btn-danger float-start">Logout</a>
+        </div>
+    </div>
+    <!-- Rest of your content -->
+</div>
+
+  
+      
+
+
+  
 <div class="container mt-5" style="max-width: 900px;">
     <div class="table-responsive">
         <table class="table table-striped table-bordered">
