--- a/gds/templates/gds/pass.html
+++ b/gds/templates/gds/pass.html
@@ -3,7 +3,7 @@
 <div class="container mt-5">
     <form class="col-6 mx-auto card p-4" style="max-width: 400px; margin: 0 auto; background-color: #f9f9f9; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);" method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        <h2 class="mb-4">Update Inventory Entry</h2>
+        <h2 class="mb-4">Kanti Steels Ltd</h2>
 
         {% if incorrect_password %}
             <div id="error-message" class="alert alert-danger" role="alert" style="margin-bottom: 15px;">
