Satyam Bhai ka authenication

--- a/gds/templates/gds/home.html
+++ b/gds/templates/gds/home.html
@@ -7,6 +7,7 @@
         <h2>Kanti Steels Ltd</h2>
 
         <div class="mb-3">
+            <link rel="stylesheet" href="styes.css">
             <label for="ItemName" class="form-label" style="font-weight: bold;">Item Name</label>
             <input type="text" name="Item_name" class="form-control" required style="width: 100%;">
         </div>
