--- a/gds/templates/gds/pass.html
+++ b/gds/templates/gds/pass.html
@@ -6,6 +6,7 @@
         <h2 class="mb-4">Kanti Steels Ltd</h2>
 
         {% if incorrect_password %}
+            {{incorrect_password}}
             <div id="error-message" class="alert alert-danger" role="alert" style="margin-bottom: 15px;">
                 <strong>Error:</strong> Incorrect Security Pin. Please try again.
             </div>
